# saturday-vinyl-supabase

./: .env.example  .gitignore  CLAUDE.md  CMakeLists.txt  FILE_LIBRARY_IMPLEMENTATION.md  PROMPT_34_CUSTOMER_REMOVAL.md  README.md  TESTING_PROMPT_21.md  TODO.md  conductor-setup.sh  conductor.json  partitions.csv  prompt_plan.md  prompt_plan_machine_control_enhancements.md  prompt_plan_production_steps.md  pubspec.yaml  qr_code_lightburn.gc  sdkconfig.defaults  spec.md  test_sample.dart
.claude/commands/: build-ipa.md  new-migration.md  project-background.md
android/app/: build.gradle.kts
assets/animations/: saturday-logo-intro.json
components/cloud/: CMakeLists.txt  event_reporter.c  supabase_client.c
components/config/: CMakeLists.txt  config_store.c
components/network/: CMakeLists.txt  http_client.c  idf_component.yml  thread_br.c  wifi_manager.c
components/network/include/: thread_br.h  wifi_manager.h
components/provisioning/: CMakeLists.txt  ble_prov.c  device_protocol.c  firmware_schema.json  idf_component.yml  serial_prov.c  service_manifest.json
components/rfid/: CMakeLists.txt  now_playing.c  rfid_protocol.c  yrm100_driver.c
components/ui/: CMakeLists.txt  button_handler.c  led_manager.c
deep-link-files/.well-known/: apple-app-site-association  assetlinks.json
docs/: DEVELOPERS_GUIDE.md  IMPLEMENTATION_PLAN.md  LABEL_PRINTING_FEATURE.md  MACHINE_CONTROL_FEATURE.md  PROMPT_14_PRODUCTION_UNITS_QR.md  PROMPT_15_PRODUCTION_UNIT_REPOSITORY.md  PROMPT_17_UNIT_LIST_DETAIL.md  PUSH_NOTIFICATIONS_DEVELOPMENT.md  PUSH_NOTIFICATIONS_SETUP.md  QR_CODE_GENERATION.md  ROOM_OBSERVATIONS.md  TRACK_DETECTION_CLOUD_SYNC_PLAN.md  UHF_RFID_TECHNICAL_GUIDE.md  authentication.md  developers_guide.md  hub_provisioning_guide.md  implementation_plan.md  label_printing.md  multiple_labels.md  parts_inventory.md  parts_inventory_implementation_plan.md  radio_coexistence_guide.md  service_mode_protocol.md  state_management.md  supabase_storage_setup.md  uhf_rfid_technical.md
docs/archive/: radio_coexistence_guide_c6.md
docs/wiring/: hub_wiring.md  pinout.csv
foundation/: CLAUDE.md  constitution.md  saturday_design_system_foundations.md
h2-thread-br/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
h2-thread-br/components/thread/: CMakeLists.txt  thread_br.c
h2-thread-br/components/thread/include/: thread_br.h
h2-thread-br/main/: CMakeLists.txt  app_config.h  idf_component.yml  main.c
ios/: FlipTimerWidgetExtension.entitlements  Podfile
ios/FlipTimerWidget/: Info.plist  (+2 more)
lib/: app.dart  main.dart
linux/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  idf_component.yml  main.c
prompts/: admin_product_image_slot_editor.md  audit_admin_app_flat_commands.md  audit_admin_app_heartbeat_refactor.md  audit_command_ack_telemetry.md  consumer_app_team_refactor.md  firmware_team_refactor.md  generate-image.md  production_steps.md  push_shared_docs.md  roll_based_rfid_workflow.md  tags_implementation.md
protocols/: ble_provisioning_protocol.md  coap_mesh_protocol.md  coap_protocol.md  device_command_protocol.md  led_status_protocol.md  ota_protocol.md  playback_event_protocol.md
s3-master/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.release
s3-master/components/cloud/: CMakeLists.txt  adoption_client.c  event_reporter.c  realtime_client.c  supabase_client.c
s3-master/components/cloud/include/: adoption_client.h  event_reporter.h  realtime_client.h  supabase_client.h
s3-master/components/network/: CMakeLists.txt  http_client.c  wifi_manager.c
s3-master/components/network/include/: http_client.h  wifi_manager.h
s3-master/components/ota/: CMakeLists.txt  ota_manager.c
s3-master/components/ota/include/: ota_manager.h
s3-master/components/provisioning/: CMakeLists.txt  ble_prov.c  firmware_schema.json  serial_prov.c  service_manifest.json
s3-master/components/provisioning/include/: ble_prov.h  serial_prov.h
schema/: SCHEMA.md  schema_dump.sql
schemas/: capability_schema.md  firmware_manifest_schema.md
scripts/: backfill_discogs_artist_ids.dart  generate-schema-docs.sh  release-macos.sh  setup-shared-docs.sh  setup-supabase-subtree.sh
shared/: CMakeLists.txt
shared-docs/: README.md
shared-supabase/: CLAUDE.md  README.md
specs/: tags_feature.md
supabase/: README.md  config.toml  seed_schema_migrations.sql
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+844 files in other folders)
